--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="col-2-of-3">
                 <p class="about_text">Hello! I'm Sagar, an engineering student based in Noida, India.</p>
-                <p class="about_text">I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+                <!-- <p class="about_text">I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p> -->
                 <p class="about_text">Shortly after completing my 12th from <a>MPVM: Ganga Gurukulam</a>, I joined <a>Jaypee Institute of Information Technology</a> to pursue <a href="">B.Tech in Electronics and Communication engineering,</a> where I learn wide variety of interesting and meaningful things on a daily basis.</p>
                 <p class="about_text">Here are a few technologies I've been working with recently:</p><br>
                 <div class="skills">
